# mcp_rag_ollama

./: .env copy  .gitignore  README.md  pyproject.toml
simple_demo/: clinet.py  server.py
web_mcp_rag/: agent.py  rag.py  rag_firecrawl.py  search.py  search_firecrawl.py  server.py
